<resources>
    <string name="app_name">BLE Payment</string>
    <string name="beacon_list">List of Beacons</string>
    <string name="action_settings">Settings</string>
    <string name="formal_app_name">BLE Payment Using Beacon</string>
    <string name="map_button">Map with position</string>
    <string name="measure_button">Single measurement</string>
    <string name="x_value">Enter the x value: </string>
    <string name="y_value">Enter the y value: </string>
    <string name="z_value">Enter the z value: </string>
    <string name="map_settings">Change the dimensions of the map</string>
    <string name="reset_pos">Reset</string>
    <string name="info">Info</string>
    <string name="minor">The minor: </string>
    <string name="power">The current power: </string>
    <string name="interval">The current interval: </string>
    <string name="connecting">connecting...</string>
    <string name="confirm">Confirm</string>
</resources>
