<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/formal_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"/>

    <Button
        android:text="@string/beacon_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/beacon_list" />

    <Button
        android:text="@string/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map_position" />

    <Button
        android:text="@string/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_button" />

    <Button
        android:text="@string/measure_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/single_measure" />

    <TableLayout android:id="@+id/table_distance"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

    </TableLayout>
    <TextView android:id="@+id/show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
